[2단계 - 로그인 구현하기] 티모(윤호준) 미션 제출합니다. (#1192)
* feat: GET /index.html 응답 추가

* test: CSS 지원 테스트 코드 작성

* feat: CSS 지원 기능 구현

* test: 쿼리 파싱 테스트 코드 구현

* feat: 쿼리 파싱 기능 구현

* refactor: 코드 리팩토링

* fix: login Optional User 처리 로직 수정

* chore: 정적 리소스 줄바꿈 형식 고정

* feat: 로그인 폼을 POST 방식으로 변경

* feat: 로그인 회원가입 및 세션 처리 구현

* test: 로그인 회원가입 및 세션 동작 검증

* fix: 회원가입 요청 검증 처리

* refactor: 코드 수정