@@ -1,12 +1,10 @@
 package org.apache.coyote.http11;
 
+import com.techcourse.db.InMemoryUserRepository;
 import org.junit.jupiter.api.Test;
 import support.StubSocket;
 
-import java.io.File;
 import java.io.IOException;
-import java.net.URL;
-import java.nio.file.Files;
 import java.nio.charset.StandardCharsets;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -23,14 +21,12 @@ class Http11ProcessorTest {
         processor.process(socket);
 
         // then
-        var expected = String.join("\r\n",
-                "HTTP/1.1 200 OK ",
-                "Content-Type: text/html;charset=utf-8 ",
-                "Content-Length: 12 ",
-                "",
-                "Hello world!");
-
-        assertThat(socket.output()).isEqualTo(expected);
+        assertThat(socket.output())
+                .startsWith("HTTP/1.1 200 OK\r\n")
+                .contains("Content-Type: text/html;charset=utf-8\r\n")
+                .contains("Content-Length: 12\r\n")
+                .contains("Set-Cookie: JSESSIONID=")
+                .endsWith("\r\n\r\nHello world!");
     }
 
     @Test
@@ -50,14 +46,18 @@ class Http11ProcessorTest {
         processor.process(socket);
 
         // then
-        final URL resource = getClass().getClassLoader().getResource("static/index.html");
-        var expected = "HTTP/1.1 200 OK \r\n" +
-                "Content-Type: text/html;charset=utf-8 \r\n" +
-                "Content-Length: 5564 \r\n" +
-                "\r\n"+
-                new String(Files.readAllBytes(new File(resource.getFile()).toPath()));
+        final byte[] responseBody;
+        try (final var resource = getClass().getClassLoader()
+                .getResourceAsStream("static/index.html")) {
+            responseBody = resource.readAllBytes();
+        }
 
-        assertThat(socket.output()).isEqualTo(expected);
+        assertThat(socket.output())
+                .startsWith("HTTP/1.1 200 OK\r\n")
+                .contains("Content-Type: text/html;charset=utf-8\r\n")
+                .contains("Content-Length: " + responseBody.length + "\r\n")
+                .contains("Set-Cookie: JSESSIONID=")
+                .endsWith(new String(responseBody, StandardCharsets.UTF_8));
     }
 
     @Test
@@ -84,14 +84,12 @@ class Http11ProcessorTest {
             responseBody = resource.readAllBytes();
         }
 
-        final var expected = String.join("\r\n",
-                "HTTP/1.1 200 OK ",
-                "Content-Type: text/css;charset=utf-8 ",
-                "Content-Length: " + responseBody.length + " ",
-                "",
-                new String(responseBody, StandardCharsets.UTF_8));
-
-        assertThat(socket.output()).isEqualTo(expected);
+        assertThat(socket.output())
+                .startsWith("HTTP/1.1 200 OK\r\n")
+                .contains("Content-Type: text/css;charset=utf-8\r\n")
+                .contains("Content-Length: " + responseBody.length + "\r\n")
+                .contains("Set-Cookie: JSESSIONID=")
+                .endsWith(new String(responseBody, StandardCharsets.UTF_8));
     }
 
     @Test
@@ -121,7 +119,7 @@ class Http11ProcessorTest {
     }
 
     @Test
-    void loginWithQueryString() throws IOException {
+    void redirectToIndexWhenLoginSucceeds() {
         // given
         final String httpRequest = String.join("\r\n",
                 "GET /login?account=gugu&password=password HTTP/1.1 ",
@@ -135,14 +133,172 @@ class Http11ProcessorTest {
         processor.process(socket);
 
         // then
-        final byte[] responseBody;
-        try (final var resource = getClass().getClassLoader()
-                .getResourceAsStream("static/login.html")) {
-            responseBody = resource.readAllBytes();
-        }
-
         assertThat(socket.output())
-                .contains("HTTP/1.1 200 OK")
-                .endsWith(new String(responseBody, StandardCharsets.UTF_8));
+                .contains("HTTP/1.1 302 Found")
+                .contains("Location: /index.html");
     }
+
+    @Test
+    void redirectToUnauthorizedPageWhenLoginFails() {
+        // given
+        final String httpRequest = String.join("\r\n",
+                "GET /login?account=gugu&password=wrong HTTP/1.1 ",
+                "Host: localhost:8080 ",
+                "",
+                "");
+        final var socket = new StubSocket(httpRequest);
+        final var processor = new Http11Processor(socket);
+
+        // when
+        processor.process(socket);
+
+        // then
+        assertThat(socket.output())
+                .contains("HTTP/1.1 302 Found")
+                .contains("Location: /401.html");
+    }
+
+    @Test
+    void registerUserFromPostData() {
+        // given
+        final String account = "new-user";
+        final String requestBody =
+                "account=new%2Duser&password=password&email=new-user%40woowahan.com";
+        final String httpRequest = String.join("\r\n",
+                "POST /register HTTP/1.1 ",
+                "Host: localhost:8080 ",
+                "Content-Type: application/x-www-form-urlencoded ",
+                "Content-Length: " + requestBody.getBytes(StandardCharsets.UTF_8).length + " ",
+                "",
+                requestBody);
+
+        assertThat(InMemoryUserRepository.findByAccount(account)).isEmpty();
+        final var socket = new StubSocket(httpRequest);
+        final var processor = new Http11Processor(socket);
+
+        // when
+        processor.process(socket);
+
+        // then
+        final var savedUser = InMemoryUserRepository.findByAccount(account);
+        assertThat(savedUser).hasValueSatisfying(user -> {
+            assertThat(user.getAccount()).isEqualTo(account);
+            assertThat(user.checkPassword("password")).isTrue();
+        });
+        assertThat(socket.output())
+                .contains("HTTP/1.1 302 Found")
+                .contains("Location: /index.html");
+    }
+
+    @Test
+    void redirectToRegisterWhenRegistrationDataIsBlank() {
+        // given
+        final String account = "blank-user";
+        final String requestBody =
+                "account=" + account + "&password=%20%20%20&email=blank-user%40woowahan.com";
+        final String httpRequest = String.join("\r\n",
+                "POST /register HTTP/1.1 ",
+                "Host: localhost:8080 ",
+                "Content-Type: application/x-www-form-urlencoded ",
+                "Content-Length: " + requestBody.getBytes(StandardCharsets.UTF_8).length + " ",
+                "",
+                requestBody);
+        final var socket = new StubSocket(httpRequest);
+        final var processor = new Http11Processor(socket);
+
+        // when
+        processor.process(socket);
+
+        // then
+        assertThat(InMemoryUserRepository.findByAccount(account)).isEmpty();
+        assertThat(socket.output())
+                .contains("HTTP/1.1 302 Found")
+                .contains("Location: /register");
+    }
+
+    @Test
+    void doesNotRegisterUserForGetRequest() {
+        // given
+        final String account = "get-user";
+        final String httpRequest = String.join("\r\n",
+                "GET /register?account=" + account + "&password=password&email=get-user%40woowahan.com HTTP/1.1 ",
+                "Host: localhost:8080 ",
+                "",
+                "");
+        final var socket = new StubSocket(httpRequest);
+        final var processor = new Http11Processor(socket);
+
+        // when
+        processor.process(socket);
+
+        // then
+        assertThat(InMemoryUserRepository.findByAccount(account)).isEmpty();
+        assertThat(socket.output()).contains("HTTP/1.1 200 OK");
+    }
+
+    @Test
+    void keepLoginStateWithJsessionId() {
+        // given
+        final String requestBody = "account=gugu&password=password";
+        final String loginRequest = String.join("\r\n",
+                "POST /login HTTP/1.1",
+                "Host: localhost:8080",
+                "Content-Type: application/x-www-form-urlencoded",
+                "Content-Length: " + requestBody.getBytes(StandardCharsets.UTF_8).length,
+                "",
+                requestBody);
+        final var loginSocket = new StubSocket(loginRequest);
+
+        // when
+        new Http11Processor(loginSocket).process(loginSocket);
+
+        // then
+        assertThat(loginSocket.output())
+                .contains("HTTP/1.1 302 Found")
+                .contains("Location: /index.html")
+                .contains("Set-Cookie: JSESSIONID=");
+
+        final String sessionId = extractSessionId(loginSocket.output());
+        final String loginPageRequest = String.join("\r\n",
+                "GET /login HTTP/1.1",
+                "Host: localhost:8080",
+                "Cookie: yummy_cookie=choco; tasty_cookie=strawberry; JSESSIONID=" + sessionId,
+                "",
+                "");
+        final var loginPageSocket = new StubSocket(loginPageRequest);
+
+        new Http11Processor(loginPageSocket).process(loginPageSocket);
+
+        assertThat(loginPageSocket.output())
+                .contains("HTTP/1.1 302 Found")
+                .contains("Location: /index.html")
+                .doesNotContain("Set-Cookie: JSESSIONID=");
+    }
+
+    @Test
+    void manageSessionAttributesAndInvalidation() {
+        // given
+        final String sessionId = "session-for-manager-test";
+        final var session = Http11Processor.SessionManager.getOrCreate(sessionId);
+
+        // when & then
+        session.setAttribute("user", "gugu");
+        assertThat(session.getId()).isEqualTo(sessionId);
+        assertThat(session.getAttribute("user")).isEqualTo("gugu");
+        assertThat(Http11Processor.SessionManager.findById(sessionId)).contains(session);
+
+        session.removeAttribute("user");
+        assertThat(session.getAttribute("user")).isNull();
+
+        session.invalidate();
+        assertThat(Http11Processor.SessionManager.findById(sessionId)).isEmpty();
+    }
+
+    private String extractSessionId(final String response) {
+        final String prefix = "Set-Cookie: JSESSIONID=";
+        final int start = response.indexOf(prefix) + prefix.length();
+        final int end = response.indexOf("\r\n", start);
+        return response.substring(start, end);
+    }
+
 }
